[metadata]
name = wds_utilities
version = 1.0.1
author = silaspdj
author_email = silsilinhas@gmail.com
description = Selenium webdriver shortcuts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SilasPDJ/wds_utilities
project_urls =
    Bug Tracker = https://github.com/SilasPDJ/wds_utilities/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src